--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Schedule</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members Area<b class="caret"></b></a>
                 <ul class="dropdown-menu">
