--- a/schedule.html
+++ b/schedule.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Schedule</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members Area<b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -48,11 +48,11 @@
 
       <!-- End main content-->
  <div class="container-fluid">
-	<section class="welcome">
+	<section class="welcome"> 
 		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
 		<div class="max-iframe">
 		<div class="embed-responsive embed-responsive-4by3">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
+			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0"></iframe>
 		</div>
 	</div>
 	</section>
