--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
 		<div class="max-iframe">
 		<div class="embed-responsive embed-responsive-4by3">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
-		</div>
+<!-- 			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
+ -->		</div>
 	</div>
 	</section>
 </div>
