--- a/about.html
+++ b/about.html
@@ -48,6 +48,26 @@
 
 <!-- Main content-->
     <div class="container">
+      <div class="row ft">
+        <div class="col-sm-6 hidden-xs">
+          <div class="ft-icon camera img-rounded"></div>
+        </div>
+        <div class="col-sm-6 ft-copy">
+          <h2>Securely delete photos &amp; video based on a timer</h2>
+          <p>
+            Learn how to write the code that downloads and displays messages, photos, and videos that timeout after a few seconds. Then create the code that deletes them from the back-end to make them "self destruct."
+          </p>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+    <div class="container">
       <div class="row">
         <div class="col-sm-4">
           <b class="glyphicon glyphicon-list"></b>
@@ -108,8 +128,8 @@
 		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
 		<div class="max-iframe">
 		<div class="embed-responsive embed-responsive-4by3">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
-		</div>
+<!-- 			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
+ -->		</div>
 	</div>
 	</section>
 </div>
