Moving stuff around

--- a/about.html
+++ b/about.html
@@ -48,6 +48,15 @@
 
 
 <!-- Main content-->
+<div class="container-fluid">
+	<div id="Coaches"></div>
+		<section class="coaches">
+			<h1>Meet Cam & Kevin</h1>
+				<p>They will be your coach, your trainer and your biggest supporter from day one. </p>
+					<img src="img/cam.jpg" class="img-responsive" alt="Cam" id="cam">
+					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
+		</section>
+</div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
