--- a/about.html
+++ b/about.html
@@ -57,6 +57,17 @@
 					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
 		</section>
 </div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="thumbnail">
+      <img src="img/class.jpg" class="img-responsive" alt="group classes">
+      <div class="caption">
+        <h3>Group Classes</h3>
+        <p>Insert text</p>
+        <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
+      </div>
+    </div>
+  </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -75,7 +86,7 @@
           <p>All of our workouts are measurable so you can benchmark your scores and see real improvement. </p>
         </div>
       </div>
-      </div>
+     </div>
 
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4">
@@ -122,15 +133,6 @@
 		</div>
 	</div>
 	</section>
-</div>
-<div class="container-fluid">
-	<div id="Coaches"></div>
-		<section class="coaches">
-			<h1>Meet Cam & Kevin</h1>
-				<p>They will be your coach, your trainer and your biggest supporter from day one. </p>
-					<img src="img/cam.jpg" class="img-responsive" alt="Cam" id="cam">
-					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
-		</section>
 </div>
 <div class="container-fluid">
 	<div id="Crossfit"></div>
