--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		</section>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-s-6">
     <div class="thumbnail">
       <img src="img/class.jpg" class="img-responsive" alt="group classes">
       <div class="caption">
@@ -68,6 +68,21 @@
       </div>
     </div>
   </div>
+<div class="row">
+  <div class="col-xs-12 col-sm-6">
+    <div class="thumbnail">
+      <img src="img/blood.jpg" class="img-responsive" alt="CrossFit Oshawa">
+      <div class="caption">
+        <h3>Lift</h3>
+        <p>The foundation of our program is strength. But don't worry, we start light!</p>
+        <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
+      </div>
+    </div>
+  </div>
+
+
+
+
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
