--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		</section>
 </div>
 <div class="row">
-  <div class="col-xs-12 col-s-6">
+  <div class="col-xs-6 col-sm-6">
     <div class="thumbnail">
       <img src="img/class.jpg" class="img-responsive" alt="group classes">
       <div class="caption">
