--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <div class="row">
   <div class="col-xs-6 col-sm-6">
     <div class="thumbnail">
-      <img src="img/class.jpg" class="img-responsive" alt="group classes">
+      <img src="img/Determination.jpg" class="img-responsive" alt="group classes">
       <div class="caption">
         <h3>Group Classes</h3>
         <p>Insert text</p>
