--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <div class="row">
   <div class="col-xs-6 col-sm-6">
     <div class="thumbnail">
-      <img src="img/Determination.jpg" class="img-responsive" alt="group classes">
+      <img src="img/girls.jpg" class="img-responsive" alt="group classes">
       <div class="caption">
         <h3>Group Classes</h3>
         <p>Insert text</p>
@@ -71,7 +71,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6">
     <div class="thumbnail">
-      <img src="img/blood.jpg" class="img-responsive" alt="CrossFit Oshawa">
+      <img src="img/header.jpg" class="img-responsive" alt="CrossFit Oshawa">
       <div class="caption">
         <h3>Lift</h3>
         <p>The foundation of our program is strength. But don't worry, we start light!</p>
