--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <h1>Group Fitness</h1>
             <p class="lead">Join a community of like-minded people who will help you become more fit.</p>
             <p class="btn-group">
-              <a class="btn btn-primary btn-lg" href="#">Call us</a>
+              <a class="btn btn-primary btn-lg" href="#">Learn More</a>
               <a class="btn btn-default btn-lg hidden-xs" data-toggle="modal" href="#textModal">Email Your Questions</a>
             </p>           
           </div>
           <div class="carousel2 item">
-            <h1>High Intensity</h1>
+            <h1>Catered to You</h1>
             <p class="lead">We offer group classes, team training and one-on-one coaching.</p>
-            <p><a class="btn btn-primary btn-lg" href="#">Get started today!</a>      
+            <p><a class="btn btn-primary btn-lg" href="#">Get started today!</a>     
           </div>
           <div class="item">
-            <h1>Supportive Community</h1>
+            <h1>That's Always Timed</h1>
             <p class="lead">Take advantage of our on-site physiotherpaist, massage therpist or nutrition seminars</p>
-            <p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>           
+            <p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>     
           </div>
         </div>     
       </div>
@@ -153,7 +153,7 @@
 	</div>
 	</section>
 </div>
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 	<div id="Coaches"></div>
 		<section class="coaches">
 			<h1>Meet Cam & Kevin</h1>
@@ -161,7 +161,7 @@
 					<img src="img/cam.jpg" class="img-responsive" alt="Cam" id="cam">
 					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
 		</section>
-</div>
+</div> -->
 <div class="container-fluid">
 	<div id="Crossfit"></div>
 		<section class="crossfit">
