--- a/schedule.html
+++ b/schedule.html
@@ -50,6 +50,14 @@
 
 
       <!-- End main content-->
+<div class="contrainer-fluid">
+	<div class="schedule-cover">
+		<h1>Schedule</h1>
+		<p>Paragraph</p>
+	</div>
+</div>
+
+
 <div class="container-fluid">
 	<div id="Location"></div>
 		<section class="location">
