--- a/schedule.html
+++ b/schedule.html
@@ -51,9 +51,11 @@
 
       <!-- End main content-->
 <div class="contrainer-fluid">
-	<div class="schedule-cover">
-		<h1>Schedule</h1>
-		<p>Paragraph</p>
+	<div class="meh">
+		<div class="schedule-cover">
+			<h1>Schedule</h1>
+			<p>Paragraph</p>
+		</div>
 	</div>
 </div>
 
