--- a/schedule.html
+++ b/schedule.html
@@ -51,7 +51,7 @@
 
       <!-- End main content-->
 <div class="contrainer-fluid">
-	<div class="meh">
+	<div class="schedule">
 		<div class="schedule-cover">
 			<h1>Schedule</h1>
 			<p>Paragraph</p>
