--- a/schedule.html
+++ b/schedule.html
@@ -55,6 +55,9 @@
 		<div class="schedule-cover">
 			<h1>Schedule</h1>
 			<p>Paragraph</p>
+			<p>Paragraph</p>
+			<p>Paragraph</p>
+			<p>Paragraph</p>
 		</div>
 	</div>
 </div>
