--- a/schedule.html
+++ b/schedule.html
@@ -89,7 +89,7 @@
 <div class="container-fluid">
 	<div id="Started"></div>
 		<section class="get-started">
-			<h1>Get Started</h1>
+			<h1>Get Started Today!</h1>
 				<form class="form-inline">
 				  <div class="form-group">
 				    <label for="exampleInputName2">Name</label>
