--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
             <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Today's Workout</a></li>
+            <li><a href="#">Testamonials</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members Area<b class="caret"></b></a>
                 <ul class="dropdown-menu">
