--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="#">Pricing</a></li>
-            <li><a href="#">Today's Workout</a></li>
+            <li><a href="#">WOD</a></li>
             <li><a href="#">Testamonials</a></li>
             <li class="dropdown">
-              <a data-toggle="dropdown" data-target="#">Members Area<b class="caret"></b></a>
+              <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">WOD</a></li>
+                  <li><a href="#">Pure Power Hockey</a></li>
                   <li><a href="#">Video Tutorials</a></li>
                   <li><a href="#">Advanced Training Seminars</a></li>
-                  <li class="divider"></li>
-                    <li><a href="#">Memberships &amp; Pricing</a></li>
                 </ul>
             </li>
           </ul>
