--- a/schedule.html
+++ b/schedule.html
@@ -27,20 +27,19 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand text-muted" href="index.html">CrossFit Oshawa</a>
+	        <a class="navbar-brand text-muted" href="#">CrossFit Oshawa</a>
     	</div>
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
             <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="#">Pricing</a></li>
             <li class="dropdown">
-              <a data-toggle="dropdown" data-target="#">Members Area<b class="caret"></b></a>
+              <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">WOD</a></li>
-                  <li><a href="#">Video Tutorials</a></li>
-                  <li><a href="#">Advanced Training Seminars</a></li>
-                  <li class="divider"></li>
-                    <li><a href="#">Memberships &amp; Pricing</a></li>
+                  <li><a href="#">Workout of the Day</a></li>
+                  <li><a href="#">Bootcamp</a></li>
+                  <li><a href="#">Pure Power Hockey</a></li>
                 </ul>
             </li>
           </ul>
