--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand text-muted" href="#">CrossFit Oshawa</a>
+	        <a class="navbar-brand text-muted" href="index.html">CrossFit Oshawa</a>
     	</div>
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
