--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
