--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="CSS/styles.css">
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
+	<link rel="stylesheet" type="text/css" href="pricing.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
