--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
 	<link rel="stylesheet" type="text/css" href="index.html">
+	<link rel="stylesheet" type="text/css" href="about.html">
+	<link rel="stylesheet" type="text/css" href="pricing.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -33,7 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About Us</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
