--- a/pricing.html
+++ b/pricing.html
@@ -51,19 +51,26 @@
 
 
       <!-- End main content-->
-<div class="contrainer-fluid">
-	<div class="schedule">
-		<div class="schedule-cover">
-			<h1>Schedule</h1>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
-		</div>
-	</div>
+<div class="container-fluid">
+	<div id="Pricing"></div>
+		<section class="pricing">
+			<h1>Pricing</h1>
+				<ul class="no-bullets">
+					<li>
+						Drop-in class - $20
+					</li>
+									<li>
+						10 classes - $130
+					</li>
+									<li>
+						Annual membership - $100/month
+					</li>
+									<li>
+						Unlimited - $165/month
+					</li>
+				</ul>
+		</section>
 </div>
-
-
 <div class="container-fluid">
 	<div id="Location"></div>
 		<section class="location">
