--- a/about.html
+++ b/about.html
@@ -50,6 +50,13 @@
 
 
 <!-- Main content-->
+
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+
 <div class="container-fluid">
 	<div id="Coaches"></div>
 		<section class="coaches">
