--- a/about.html
+++ b/about.html
@@ -52,9 +52,11 @@
 <!-- Main content-->
 
 <div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	<div class="container">
+	  <h1>Getting to Know Us</h1>
+	  <p>We are a community of like-minded people. </p>
+	  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
 </div>
 
 <div class="container-fluid">
