--- a/about.html
+++ b/about.html
@@ -58,7 +58,6 @@
 	  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 	</div>
 </div>
-
 <div class="container-fluid">
 	<div id="Coaches"></div>
 		<section class="coaches">
@@ -74,7 +73,7 @@
       <img src="img/girls.jpg" class="img-responsive" alt="group classes">
       <div class="caption">
         <h3>Group Classes</h3>
-        <p>Insert text</p>
+        <p>Our classes range between 5-15 other members. Sometimes they help you through your workout, sometimes they are your biggest compeition.</p>
         <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
       </div>
     </div>
