--- a/schedule.html
+++ b/schedule.html
@@ -55,10 +55,11 @@
 	<div class="schedule">
 		<div class="schedule-cover">
 			<h1>Schedule</h1>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
-			<p>Paragraph</p>
+			<p>Monday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm </p>
+			<p>Tuesday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
+			<p>Wednesday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
+			<p>Thursday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
+			<p>Friday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
 		</div>
 	</div>
 </div>
@@ -104,9 +105,8 @@
 				</form>
 			</div>
 
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
 
