--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
-	<link rel="stylesheet" type="text/css" href="index.html">
+	<link rel="stylesheet" type="text/css" href="index2.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
-
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -28,7 +28,7 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand text-muted" href="index.html">CrossFit Oshawa</a>
+	        <a class="navbar-brand text-muted" href="index2.html">CrossFit Oshawa</a>
     	</div>
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
@@ -88,13 +88,19 @@
       </div>
     </div>
   </div>
+</div>
 
-
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">What is CrossFit?</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
 
       <!-- End main content-->
 <div class="container-fluid">
 	<div id="Community"></div>
-		<section class="community">
+		<section class="community pad_sec_top">
 			<h1>Community</h1>
 				<p> You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable.</p>
 				<p>You're not just signing up for a gym, you're building a support system</p>
