--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href="css/my-styles.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" type="text/css" href="normalize.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../../assets/js/html5shiv.js"></script>
@@ -142,21 +143,39 @@
   </div>
 </div>
 
- <div class="container-fluid">
-	<section class="welcome">
-		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
-		<div class="max-iframe">
-		<div class="embed-responsive embed-responsive-4by3">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
-		</div>
-	</div>
-	</section>
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">What is CrossFit?</h3>
+  <div class="arrow"></div>
 </div>
+<!-- Connector -->
+
+ <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-xs-12">
+      	<section class="welcome pad_sec_top">
+      		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
+      		<div class="max-iframe">
+      		<div class="embed-responsive embed-responsive-4by3">
+      			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
+      		</div>
+      	</div>
+    	 </section>
+    </div>
+  </div>
+</div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">In Layman's Terms, please </h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid crossfit">
   <div class="row">
-    <div class="col-lg-6 col-xs-12">
-    		<section>
-    			<h1>So What Exactly is Crossfit?</h1>
+    <div class="col-sm-6 col-xs-12">
+    		<section class="pad_sec_top">
     				<p>Crossfit is a type of competitive fitness that is usually done in a group setting with measurable results. It incorporates elements from high-intensity interval training, Olympic weightlifting, plyometrics, powerlifting, gymnastics, girevoy sport, calisthenics, strongman and other exercises.</p>
     				<br>
     				<p> It sounds a lot more intimidating than it really is. All of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
@@ -164,10 +183,19 @@
       </div>
     </div>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Insert Text </h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
+
 <div class="container-fluid workout">
   <div class="row">
-    <div class="col-lg-6 col-xs-12">
-    		<section>
+    <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+    		<section class="pad_sec_top">
     			<h1>Workout of the Day</h1>
     				<p>You are given a new workout every day. Sometimes they are short, fast and only involve bodyweight movements. Sometimes they are long, slow and require fairly heavy weights.</p>
     				<p>What makes Crossfit great is that you, as an athlete, never know what workout you're up against each day. Your body is constantly challenged and forced to adapt. </p>
@@ -175,17 +203,35 @@
       </div>
     </div>
 </div>
-<div class="container-fluid community">
-	<div id="Community"></div>
-		<section>
-			<h1>Community</h1>
-				<p> You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable.</p>
-				<p>You're not just signing up for a gym, you're building a support system</p>
-		</section>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Insert Text </h3>
+  <div class="arrow"></div>
 </div>
+<!-- Connector -->
+
+<div class="container-fluid community">
+	<div class="row">
+    <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+  		<section class="pad_sec_top">
+  			<h1>Community</h1>
+  				<p> You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable.</p>
+  				<p>You're not just signing up for a gym, you're building a support system</p>
+  		  </section>
+    </div>
+  </div>
+</div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Insert Text </h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
-	<div id="Location"></div>
-		<section class="location">
+		<section class="location pad_sec_top">
 			<h1>Location</h1>
 				<ul id="address">
 						<li>
@@ -206,9 +252,16 @@
 					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2875.7189195560613!2d-78.835827!3d43.882374999999996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d502d2565efbcd%3A0x6aedeab76df8989c!2sCrossFit+Oshawa!5e0!3m2!1sen!2sca!4v1425007207794" width="55%" height="50%" frameborder="0" style="border:0"></iframe>
 		</section>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Insert Text </h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
-	<div id="Started"></div>
-		<section class="get-started">
+		<section class="get-started pad_sec_top">
 			<h1>Get Started</h1>
 				<form class="form-inline">
 				  <div class="form-group">
