--- a/pricing.html
+++ b/pricing.html
@@ -4,11 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
-	<link rel="stylesheet" type="text/css" href="index.html">
+	<link rel="stylesheet" type="text/css" href="index2.html">
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/function.js"></script>
 
@@ -29,7 +30,7 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand text-muted" href="index.html">CrossFit Oshawa</a>
+	        <a class="navbar-brand text-muted" href="index2.html">CrossFit Oshawa</a>
     	</div>
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
