--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6">
     <div class="thumbnail">
-      <img src="img/header.jpg" class="img-responsive" alt="CrossFit Oshawa">
+      <img src="img/members.png" class="img-responsive" alt="CrossFit Oshawa">
       <div class="caption">
         <h3>Lift</h3>
         <p>The foundation of our program is strength. But don't worry, we start light!</p>
