--- a/about.html
+++ b/about.html
@@ -57,6 +57,14 @@
 	  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 	</div>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Who We are</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
 	<div id="Coaches"></div>
 		<section class="coaches">
@@ -66,6 +74,32 @@
 					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
 		</section>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">How it Works </h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
+ <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-xs-12">
+      	<section class="welcome pad_sec_top">
+      		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
+          <p> It sounds intimidating but all of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
+    	 </section>
+    </div>
+  </div>
+</div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">Why Join</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="row">
   <div class="col-xs-12 col-sm-6">
     <div class="thumbnail">
@@ -92,24 +126,13 @@
 
 <!-- Connector -->
 <div class="connector">
-  <h3 class="">What is CrossFit?</h3>
+  <h3 class="">Pricing</h3>
   <div class="arrow"></div>
 </div>
 <!-- Connector -->
 
-      <!-- End main content-->
 <div class="container-fluid">
-	<div id="Community"></div>
-		<section class="community pad_sec_top">
-			<h1>Community</h1>
-				<p> You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable.</p>
-				<p>You're not just signing up for a gym, you're building a support system</p>
-		</section>
-</div>
-<div class="container-fluid">
-	<div id="Pricing"></div>
 		<section class="pricing">
-			<h1>Pricing</h1>
 				<ul class="no-bullets">
 					<li>
 						Drop-in class - $20
@@ -126,6 +149,14 @@
 				</ul>
 		</section>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">Stop in</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
 	<div id="Location"></div>
 		<section class="location">
@@ -149,6 +180,14 @@
 					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2875.7189195560613!2d-78.835827!3d43.882374999999996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d502d2565efbcd%3A0x6aedeab76df8989c!2sCrossFit+Oshawa!5e0!3m2!1sen!2sca!4v1425007207794" width="55%" height="50%" frameborder="0" style="border:0"></iframe>
 		</section>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">book your free one-on-one session</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
 	<div id="Started"></div>
 		<section class="get-started">
@@ -165,6 +204,7 @@
 				  <button type="submit" class="btn btn-primary">Send</button>
 				</form>
 			</div>
+      <!-- End main content-->
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
