--- a/index2.html
+++ b/index2.html
@@ -169,31 +169,10 @@
 
 <!-- Connector -->
 <div class="connector">
-  <h3 class="connector-header">What is CrossFit?</h3>
+  <h3 class="connector-header">How it works</h3>
   <div class="arrow"></div>
 </div>
 <!-- Connector -->
-
- <div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-12 col-xs-12">
-      	<section class="welcome pad_sec_top">
-      		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
-          <p> It sounds intimidating but all of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
-      		</div>
-      	</div>
-    	 </section>
-    </div>
-  </div>
-</div>
-
-<!-- Connector -->
-<div class="connector">
-  <h3 class="connector-header">How it Works </h3>
-  <div class="arrow"></div>
-</div>
-<!-- Connector -->
-
 
 <div class="container-fluid workout">
   <div class="row">
