--- a/schedule.html
+++ b/schedule.html
@@ -65,6 +65,13 @@
 	</div>
 </div>
 
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">Find us</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 
 <div class="container-fluid">
 	<div id="Location"></div>
@@ -89,6 +96,14 @@
 					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2875.7189195560613!2d-78.835827!3d43.882374999999996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d502d2565efbcd%3A0x6aedeab76df8989c!2sCrossFit+Oshawa!5e0!3m2!1sen!2sca!4v1425007207794" width="55%" height="50%" frameborder="0" style="border:0"></iframe>
 		</section>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="">Book your free one-on-one session</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid">
 	<div id="Started"></div>
 		<section class="get-started">
