--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="index2.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
+	<link rel="stylesheet" type="text/css" href="pph.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="normalize.css">
@@ -40,7 +41,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Workout of the Day</a></li>
                   <li><a href="#">Bootcamp</a></li>
-                  <li><a href="#">Pure Power Hockey</a></li>
+                  <li><a href="pph.html">Pure Power Hockey</a></li>
                 </ul>
             </li>
           </ul>
@@ -116,7 +117,7 @@
     <div class="thumbnail">
       <img src="img/members.png" class="img-responsive" alt="CrossFit Oshawa">
       <div class="caption">
-        <h3>Lift</h3>
+        <h3>Team Competitions</h3>
         <p>The foundation of our program is strength. But don't worry, we start light!</p>
         <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
       </div>
