--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="index2.html">
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
+	<link rel="stylesheet" type="text/css" href="pph.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <link href="css/my-styles.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="normalize.css">
@@ -42,7 +43,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Workout of the Day</a></li>
                   <li><a href="#">Bootcamp</a></li>
-                  <li><a href="#">Pure Power Hockey</a></li>
+                  <li><a href="pph.html">Pure Power Hockey</a></li>
                 </ul>
             </li>
           </ul>
