--- a/pph.html
+++ b/pph.html
@@ -4,10 +4,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="index2.html">
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
-  <link rel="stylesheet" type="text/css" href="pph.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
   <link href="css/my-styles.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" type="text/css" href="normalize.css">
@@ -48,53 +48,6 @@
         </div>
       </div>
     </nav><!-- End navbar -->
-
-
- <!-- Carousel -->
-    <div id="myCarousel" class="carousel slide jumbotron">
-      <div class="container">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        
-        <div class="carousel-inner">
-          <div class="item active">
-            <h1>Group Fitness</h1>
-            <p class="lead">Join a community of like-minded people who will help you become more fit.</p>
-            <p class="btn-group">
-              <a class="btn btn-primary btn-lg" href="#">Learn More</a>
-              <a class="btn btn-default btn-lg hidden-xs" data-toggle="modal" href="#textModal">Email Your Questions</a>
-            </p>           
-          </div>
-          <div class="carousel2 item">
-            <h1>Catered to You</h1>
-	            <p class="lead">We offer group classes, team training and one-on-one coaching.</p>
-	            <p><a class="btn btn-primary btn-lg" href="#">Get started today!</a>  
-        </div>
-          
-          <div class="item">
-            <h1>That's Always Timed</h1>
-            <p class="lead">Take advantage of our on-site physiotherpaist, massage therpist or nutrition seminars</p>
-            <p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>     
-          </div>
-        </div>     
-      </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="icon-prev"></span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="icon-next"></span>
-      </a>      
-    </div> <!-- End Carousel -->
-
-<!-- Connector -->
-<div class="connector">
-  <h3 class="connector-header">Why Join</h3>
-  <div class="arrow"></div>
-</div>
-<!-- Connector -->
 
 
 <!-- Main content-->
