--- a/pph.html
+++ b/pph.html
@@ -51,6 +51,28 @@
 
 
 <!-- Main content-->
+ <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-xs-12">
+        <section class="pph-header pad_sec_top">
+          <p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
+          <p> It sounds intimidating but all of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
+            <img src="img/pph.jpg">
+       </section>
+    </div>
+  </div>
+</div>
+
+ <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-xs-12">
+        <section class="tires pad_sec_top">
+          <p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>      
+       </section>
+    </div>
+  </div>
+</div>
+
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
