--- a/pph.html
+++ b/pph.html
@@ -96,9 +96,9 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/matty2.jpg" class="img-responsive" alt="Cameron Cassidy">
+      <img src="img/teamwork.jpg" class="img-responsive" alt="Cameron Cassidy">
       <div class="caption">
-        <h3>Lift</h3>
+        <h3>Group Classes</h3>
         <p>The foundation of our program is strength. But don't worry, we start light!</p>
         <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
       </div>
