--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
 
  <!-- Carousel -->
     <div id="myCarousel" class="carousel slide jumbotron">
-      <div class="container">
+      <div class="container-fluid">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
