--- a/about.html
+++ b/about.html
@@ -61,19 +61,21 @@
 
 <!-- Connector -->
 <div class="connector">
-  <h3 class="connector-header">Who We are</h3>
+  <h3 class="connector-header">Meet Cam & Kevin</h3>
   <div class="arrow"></div>
 </div>
 <!-- Connector -->
 
 <div class="container-fluid">
-	<div id="Coaches"></div>
-		<section class="coaches">
-			<h1>Meet Cam & Kevin</h1>
-				<p>They will be your coach, your trainer and your biggest supporter from day one. </p>
-					<img src="img/cam.jpg" class="img-responsive" alt="Cam" id="cam">
-					<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
-		</section>
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1 col-xs-12">
+			<section class="coaches">
+					<p>They will be your coach, your trainer and your biggest supporter from day one. </p>
+						<img src="img/cam.jpg" class="img-responsive" alt="Cam" id="cam">
+						<img src="img/kev.jpg" class="img-responsive" alt="Kevin" id="kevin">
+			</section>
+		</div>
+	</div>
 </div>
 
 <!-- Connector -->
