--- a/index2.html
+++ b/index2.html
@@ -179,9 +179,8 @@
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1 col-xs-12">
     		<section class="pad_sec_top">
-    			<h1>Workout of the Day</h1>
-    				<p>We prepare a daily workout for you. Sometimes they are short, fast and only involve bodyweight movements. Sometimes they are long, slow and require fairly heavy weights.</p>
-    				<p>What makes Crossfit great is that you, as an athlete, never know what workout you're up against each day. Your body is constantly challenged and forced to adapt. We believe this is key to making you as well-rounded athlete.</p>
+    				<p>We prepare your Workout of the Day (WOD). Sometimes they are short, fast and only involve bodyweight movements. Sometimes they are long, slow and require fairly heavy weights.</p>
+    				<p>What makes Crossfit great is that you, as an athlete, never know what WOD you're up against each day. Your body is constantly challenged and forced to adapt. We believe this is key to making you as well-rounded athlete.</p>
     		</section>
       </div>
     </div>
@@ -198,7 +197,7 @@
 	<div class="row">
     <div class="col-sm-10 col-sm-offset-1 col-xs-12">
   		<section class="pad_sec_top">
-  				<p>Ask any of our members and they'll tell you, what makes CrossFit Oshawa so special is our community of members. You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable!</p>
+  				<p>Ask any of our members and they'll tell you, what makes CrossFit Oshawa so special is our community of members. You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable!</p><br>
   				<p>You're not just signing up for a gym, you're building a support system</p>
   		  </section>
     </div>
