--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 
  <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12 col-xs-12">
+    <div class="col-sm-12 ccol-xs-12">
       	<section class="welcome pad_sec_top">
       		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
           <p> It sounds intimidating but all of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
