--- a/pph.html
+++ b/pph.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="CSS/styles.css">
-  <link rel="stylesheet" type="text/css" href="index2.html">
+  <link rel="stylesheet" type="text/css" href="index.html">
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
@@ -29,7 +29,7 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand text-muted" href="index2.html">CrossFit Oshawa</a>
+	        <a class="navbar-brand text-muted" href="index.html">CrossFit Oshawa</a>
     	</div>
         <div class="collapse navbar-collapse" id="navbar-sm-content">
           <ul class="nav navbar-nav navbar-right">
