--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="about.html">
 	<link rel="stylesheet" type="text/css" href="schedule.html">
 	<link rel="stylesheet" type="text/css" href="pricing.html">
+  <link rel="stylesheet" type="text/css" href="pph.html">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href="css/my-styles.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" type="text/css" href="normalize.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../../assets/js/html5shiv.js"></script>
@@ -39,7 +41,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Workout of the Day</a></li>
                   <li><a href="#">Bootcamp</a></li>
-                  <li><a href="#">Pure Power Hockey</a></li>
+                  <li><a href="pph.html">Pure Power Hockey</a></li>
                 </ul>
             </li>
           </ul>
@@ -50,7 +52,7 @@
 
  <!-- Carousel -->
     <div id="myCarousel" class="carousel slide jumbotron">
-      <div class="container">
+      <div class="container-fluid">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -86,6 +88,13 @@
         <span class="icon-next"></span>
       </a>      
     </div> <!-- End Carousel -->
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Why Join</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
 
 
 <!-- Main content-->
@@ -142,73 +151,70 @@
   </div>
 </div>
 
- <div class="container-fluid">
-	<section class="welcome">
-		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
-		<div class="max-iframe">
-		<div class="embed-responsive embed-responsive-4by3">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mlVrkiCoKkg" frameborder="0" allowfullscreen></iframe>
-		</div>
-	</div>
-	</section>
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">CrossFit Theory </h3>
+  <div class="arrow"></div>
 </div>
+<!-- Connector -->
+
 <div class="container-fluid crossfit">
   <div class="row">
-    <div class="col-lg-6 col-xs-12">
-    		<section>
-    			<h1>So What Exactly is Crossfit?</h1>
-    				<p>Crossfit is a type of competitive fitness that is usually done in a group setting with measurable results. It incorporates elements from high-intensity interval training, Olympic weightlifting, plyometrics, powerlifting, gymnastics, girevoy sport, calisthenics, strongman and other exercises.</p>
-    				<br>
-    				<p> It sounds a lot more intimidating than it really is. All of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
-    		</section>
+    <div class="col-sm-6 col-xs-12">
+        <section class="pad_sec_top">
+            <p>CrossFit is a type of competitive fitness that is usually done in a group setting with measurable results. It incorporates elements from high-intensity interval training, Olympic weightlifting, plyometrics, powerlifting, gymnastics, girevoy sport, calisthenics, strongman and other exercises.</p>
+        </section>
       </div>
     </div>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">How it works</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid workout">
   <div class="row">
-    <div class="col-lg-6 col-xs-12">
-    		<section>
-    			<h1>Workout of the Day</h1>
-    				<p>You are given a new workout every day. Sometimes they are short, fast and only involve bodyweight movements. Sometimes they are long, slow and require fairly heavy weights.</p>
-    				<p>What makes Crossfit great is that you, as an athlete, never know what workout you're up against each day. Your body is constantly challenged and forced to adapt. </p>
+    <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+    		<section class="pad_sec_top">
+    				<p>We prepare your Workout of the Day (WOD). Sometimes they are short, fast and only involve bodyweight movements. Sometimes they are long, slow and require fairly heavy weights.</p>
+    				<p>What makes Crossfit great is that you, as an athlete, never know what WOD you're up against each day. Your body is constantly challenged and forced to adapt. We believe this is key to making you as well-rounded athlete.</p>
     		</section>
       </div>
     </div>
 </div>
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Community</h3>
+  <div class="arrow"></div>
+</div>
+<!-- Connector -->
+
 <div class="container-fluid community">
-	<div id="Community"></div>
-		<section>
-			<h1>Community</h1>
-				<p> You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable.</p>
-				<p>You're not just signing up for a gym, you're building a support system</p>
-		</section>
+	<div class="row">
+    <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+  		<section class="pad_sec_top">
+  				<p>Ask any of our members and they'll tell you, what makes CrossFit Oshawa so special is our community of members. You will have at least one instructor walking you through each workout, and several classmates that help you, encourage you and most of all, hold you accountable!</p><br>
+  				<p>You're not just signing up for a gym, you're building a support system</p>
+  		  </section>
+    </div>
+  </div>
 </div>
-<div class="container-fluid">
-	<div id="Location"></div>
-		<section class="location">
-			<h1>Location</h1>
-				<ul id="address">
-						<li>
-							712 Wilson Road South <br>
-							Oshawa, Ontario
-						</li>
-					<a href="tel:+19054405264">
-						<li>
-							905.440.5264
-						</li>
-					</a>
-					<a href="mailto:cam@crossfitoshawa.com">
-						<li>
-							getfit@crossfitoshawa.com
-						</li>
-					</a>
-				</ul>
-					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2875.7189195560613!2d-78.835827!3d43.882374999999996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d502d2565efbcd%3A0x6aedeab76df8989c!2sCrossFit+Oshawa!5e0!3m2!1sen!2sca!4v1425007207794" width="55%" height="50%" frameborder="0" style="border:0"></iframe>
-		</section>
+
+
+
+<!-- Connector -->
+<div class="connector">
+  <h3 class="connector-header">Give it a Try</h3>
+  <div class="arrow"></div>
 </div>
+<!-- Connector -->
+
 <div class="container-fluid">
-	<div id="Started"></div>
-		<section class="get-started">
+		<section class="get-started pad_sec_top">
 			<h1>Get Started</h1>
 				<form class="form-inline">
 				  <div class="form-group">
