--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
 </div>
 <!-- Connector -->
 
- <div class="container-fluid">
+ <div class="container-fluid welcome">
   <div class="row">
     <div class="col-sm-12 ccol-xs-12">
-      	<section class="welcome pad_sec_top">
+      	<section class="pad_sec_top">
       		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
           <p> It sounds intimidating but all of our workouts are easily scaled to match your age, fitness level or accomodate an injury.</p>
     	 </section>
