--- a/schedule.html
+++ b/schedule.html
@@ -56,12 +56,16 @@
 <div class="contrainer-fluid">
 	<div class="schedule">
 		<div class="schedule-cover">
-			<h1>Schedule</h1>
-			<p>Monday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm </p>
-			<p>Tuesday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
-			<p>Wednesday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
-			<p>Thursday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
-			<p>Friday: 6am,7am,8am,9am,11am,12pm,4pm,5pm,6pm,7pm,8pm</p>
+			<ul>
+				<h1>Schedule</h1>
+					<li>Monday: 6am-8pm</li>
+					<li>Tuesday: 6am-8pm</li>
+					<li>Wednesday: 7am-10pm</li>
+					<li>Thursday: 6am-6pm</li>
+					<li>Friday: 6am-10pm</li>
+					<li>Saturday: 11am-3pm</li>
+					<li>Sunday: 12pm-4pm</li>
+			</ul>
 		</div>
 	</div>
 </div>
