--- a/about.html
+++ b/about.html
@@ -103,28 +103,30 @@
 </div>
 <!-- Connector -->
 
-<div class="row">
-  <div class="col-xs-12 col-sm-6">
-    <div class="thumbnail">
-      <img src="img/girls.jpg" class="img-responsive" alt="group classes">
-      <div class="caption">
-        <h3>Group Classes</h3>
-        <p>Our classes range between 5-15 other members. Sometimes they help you through your workout, sometimes they are your biggest compeition.</p>
-        <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
-      </div>
-    </div>
-  </div>
-<div class="row">
-  <div class="col-xs-12 col-sm-6">
-    <div class="thumbnail">
-      <img src="img/instruction.jpg" class="img-responsive" alt="CrossFit Oshawa">
-      <div class="caption">
-        <h3>Team Competitions</h3>
-        <p>The foundation of our program is strength. But don't worry, we start light!</p>
-        <p><a href="#" class="btn btn-primary" role="button">Learn More</a>
-      </div>
-    </div>
-  </div>
+<div class="container-fluid no_pad_leftright">
+	<div class="row">
+	  <div class="col-xs-12 col-sm-6">
+	    <div class="thumbnail">
+	      <img src="img/girls.jpg" class="img-responsive" alt="group classes">
+	      <div class="caption">
+	        <h3>Group Classes</h3>
+	        <p>Our classes range between 5-15 other members. Sometimes they help you through your workout, sometimes they are your biggest compeition.</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Learn More</a></p>
+	      </div>
+	    </div>
+	  </div>
+	<div class="row">
+	  <div class="col-xs-12 col-sm-6">
+	    <div class="thumbnail">
+	      <img src="img/instruction.jpg" class="img-responsive" alt="CrossFit Oshawa">
+	      <div class="caption">
+	        <h3>Team Competitions</h3>
+	        <p>The foundation of our program is strength. But don't worry, we start light!</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Learn More</a></p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 </div>
 
 <!-- Connector -->
@@ -186,7 +188,7 @@
 
 <!-- Connector -->
 <div class="connector">
-  <h3 class="">book your free one-on-one session</h3>
+  <h3 class="">book your free private session</h3>
   <div class="arrow"></div>
 </div>
 <!-- Connector -->
