--- a/index2.html
+++ b/index2.html
@@ -39,8 +39,8 @@
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Workout of the Day</a></li>
-                  <li><a href="#">Bootcamp</a></li>
+<!--                   <li><a href="#">Workout of the Day</a></li>
+                  <li><a href="#">Bootcamp</a></li> -->
                   <li><a href="pph.html">Pure Power Hockey</a></li>
                 </ul>
             </li>
