--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">Members<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Workout of the Day</a></li>
-                  <li><a href="#">Bootcamp</a></li>
+<!--                   <li><a href="#">Workout of the Day</a></li>
+                  <li><a href="#">Bootcamp</a></li> -->
                   <li><a href="pph.html">Pure Power Hockey</a></li>
                 </ul>
             </li>
@@ -203,32 +203,6 @@
     </div>
   </div>
 </div>
-
-
-
-<!-- Connector -->
-<div class="connector">
-  <h3 class="connector-header">Give it a Try</h3>
-  <div class="arrow"></div>
-</div>
-<!-- Connector -->
-
-<div class="container-fluid">
-		<section class="get-started pad_sec_top">
-			<h1>Get Started</h1>
-				<form class="form-inline">
-				  <div class="form-group">
-				    <label for="exampleInputName2">Name</label>
-				    <input type="text" class="form-control" id="exampleInputName2" placeholder="Cam Cassidy">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputEmail2">Email</label>
-				    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="camcassidy@crossfitoshawa.com">
-				  </div>
-				  <button type="submit" class="btn btn-primary">Send</button>
-				</form>
-			</div>
-      <!-- End main content-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
