--- a/pph.html
+++ b/pph.html
@@ -97,7 +97,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/teamwork.jpg" class="img-responsive" alt="Cameron Cassidy">
+      <img src="img/Teamwork.jpg" class="img-responsive" alt="Pure Power Hockey">
       <div class="caption">
         <h3>Group Classes</h3>
         <p>The foundation of our program is strength. But don't worry, we start light!</p>
