--- a/pph.html
+++ b/pph.html
@@ -71,28 +71,6 @@
     </div>
   </div>
 </div>
-
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <b class="glyphicon glyphicon-list"></b>
-          <h2><strong>Flexible Schedule</strong></h2>
-          <p>Classes begin at 6am and run throughout the day until 8pm. You can also schedule one-on-one or team sessions.</p>
-        </div>
-        <div class="col-sm-4">
-          <b class="glyphicon glyphicon-ok"></b>
-          <h2><strong>Advanced Seminars</strong></h2>
-          <p>CrossFit Oshawa offers seminars on weightlifting, gymnastics, yoga, nutrition and much more.</p>
-       </div>
-        <div class="col-sm-4">
-          <b class="glyphicon glyphicon-stats"></b>
-          <h2><strong>Compete in the Open</strong></h2>
-          <p>All of our workouts are measurable so you can benchmark your scores and see real improvement. </p>
-        </div>
-      </div>
-     </div>
      
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-4">
@@ -117,7 +95,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/community.png" class="img-responsive" alt="CrossFit Oshawa Gym">
+      <img src="img/girls.jpg" class="img-responsive" alt="CrossFit Oshawa Gym">
       <div class="caption">
         <h3>Personal Goals</h3>
         <p>Our goals as coaches are to help you meet your goals.</p>
