--- a/pph.html
+++ b/pph.html
@@ -85,7 +85,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/laugh.jpg" class="img-responsive" alt="CrossFit Oshawa Support">
+      <img src="img/instruction.jpg" class="img-responsive" alt="CrossFit Oshawa Support">
       <div class="caption">
         <h3>Support</h3>
         <p>Our members say the best part of CrossFit Oshawa is the friendships they've formed.</p>
