--- a/about.html
+++ b/about.html
@@ -85,8 +85,8 @@
 </div>
 <!-- Connector -->
 
- <div class="container-fluid welcome">
-  <div class="row">
+ <div class="container-fluid">
+  <div class="row welcome">
     <div class="col-sm-12 ccol-xs-12">
       	<section class="pad_sec_top">
       		<p>At Crossfit Oshawa, we're not just going to teach you how to become 'fit' we're going to work with you to build a healthy, balanced lifestyle. </p>
