--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,7 @@
 	<div class="schedule">
 		<div class="schedule-cover">
 			<ul>
-				<h1>Schedule</h1>
+				<h1>INSERT FANCY SCHEDULE</h1>
 					<li>Monday: 6am-8pm</li>
 					<li>Tuesday: 6am-8pm</li>
 					<li>Wednesday: 7am-10pm</li>
